--- a/src/main/resources/com/example/requestremontdesktop/add-request-view.fxml
+++ b/src/main/resources/com/example/requestremontdesktop/add-request-view.fxml
@@ -19,7 +19,7 @@
       <DatePicker fx:id="dateUpdate" layoutX="74.0" layoutY="74.0" prefHeight="42.0" prefWidth="194.0" promptText="Дата добавления" style="-fx-text-fill: #a67120;" />
       <ComboBox fx:id="comboBoxEquipment" layoutX="74.0" layoutY="133.0" prefHeight="42.0" prefWidth="194.0" promptText="Оборудование" style="-fx-text-fill: #a67120;" />
       <ComboBox fx:id="comboBoxTypeOfMalfunctions" layoutX="74.0" layoutY="194.0" prefHeight="42.0" prefWidth="194.0" promptText="Тип неисправности" style="-fx-text-fill: #a67120;" />
-      <TextField layoutX="313.0" layoutY="71.0" prefHeight="167.0" prefWidth="264.0" promptText="Описание проблемы" style="-fx-text-fill: #a67120;" />
+      <TextField fx:id="textFiledDescriptionOfProblem" layoutX="313.0" layoutY="71.0" prefHeight="167.0" prefWidth="264.0" promptText="Описание проблемы" style="-fx-text-fill: #a67120;" />
       <ComboBox fx:id="comboBoxPrioritet" layoutX="313.0" layoutY="271.0" prefHeight="42.0" prefWidth="194.0" promptText="Приоритет" style="-fx-text-fill: #a67120;" />
       <ComboBox fx:id="comboBoxExecutor" layoutX="74.0" layoutY="271.0" prefHeight="42.0" prefWidth="194.0" promptText="Исполнитель" style="-fx-text-fill: #a67120;" />
       <ComboBox fx:id="comboBoxStatus" layoutX="216.0" layoutY="351.0" prefHeight="42.0" prefWidth="194.0" promptText="Статус" style="-fx-text-fill: #a67120;" />
