--- a/src/main/resources/com/example/requestremontdesktop/main-client-view.fxml
+++ b/src/main/resources/com/example/requestremontdesktop/main-client-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,15 +14,26 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="1064.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.requestremontdesktop.MainClientController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="160.0" style="-fx-background-color: #a67120;">
+      <Pane prefHeight="410.0" prefWidth="160.0" style="-fx-background-color: #a67120;">
          <children>
             <Text fill="WHITE" layoutX="25.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Requests">
                <font>
                   <Font name="Comic Sans MS" size="26.0" />
                </font>
             </Text>
-            <Button fx:id="btnRequests" layoutX="-1.0" layoutY="73.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #a67120; -fx-text-fill: #fff;" text="Заявки" />
-            <Button fx:id="btnExit" layoutY="109.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #a67120; -fx-text-fill: #fff;" text="Выход" />
+            <Button fx:id="btnRequests" layoutX="-1.0" layoutY="73.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #a67120; -fx-text-fill: #fff;" text="Заявки">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnExit" layoutX="-1.0" layoutY="142.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #a67120; -fx-text-fill: #fff;" text="Выход">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="btnRemont" layoutY="109.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: #a67120; -fx-text-fill: #fff;" text="Ремонт">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </Pane>
       <AnchorPane fx:id="anchorPaneRequests" layoutX="160.0" prefHeight="400.0" prefWidth="904.0">
@@ -52,6 +64,31 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <TextField fx:id="requestSearchField" layoutX="14.0" layoutY="16.0" promptText="Поиск" style="-fx-text-fill: #a67120;">
+               <font>
+                  <Font name="Comic Sans MS" size="12.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="anchorPaneRemont" layoutX="161.0" prefHeight="410.0" prefWidth="922.0" visible="false">
+         <children>
+            <TableView fx:id="tableViewRemont" layoutY="62.0" prefHeight="334.0" prefWidth="904.0">
+               <columns>
+                  <TableColumn fx:id="idColumnRemont" prefWidth="40.79998779296875" text="id" />
+                  <TableColumn fx:id="nameColumnRemont" prefWidth="119.99998474121094" text="Наименование" />
+                  <TableColumn fx:id="descriptionColumnRemont" prefWidth="120.79998779296875" text="Описание" />
+                  <TableColumn fx:id="timeColumnRemont" prefWidth="137.5999755859375" text="Время" />
+                  <TableColumn fx:id="priceColumnRemont" prefWidth="143.20001220703125" text="Цена" />
+                  <TableColumn fx:id="statusColumnRemont" prefWidth="146.0" text="Статус" />
+                  <TableColumn fx:id="causeOfMalfunctionColumnRemont" prefWidth="193.0" text="Причина неисправности" />
+               </columns>
+            </TableView>
+            <Text fill="#a67120" layoutX="393.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ремонт">
+               <font>
+                  <Font name="Comic Sans MS" size="21.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
    </children>
